comm remplace communication ligne 160

--- a/etape4.html
+++ b/etape4.html
@@ -157,7 +157,7 @@
 
             <div class="col2-2">
                 <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
-                <h3>Communication</h3>
+                <h3>Comm</h3>
                 <p class="text-muted">Une stratégie de communication n’est rien, si nous ne créons pas de différences dans l’histoire à raconter.</p>
             </div>
             <div class="col2-2">
